# SeqPred

./: .gitignore  README.md  pyproject.toml  test.py  train.py  train.sh  train_csept.py
data/: spetDataset.py
docs/: EVALUATION_IMPROVEMENTS.md  EXPERIMENT_QUICK_REFERENCE.md  PRICE_RECOVERY_FEATURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  SMOOTH_WINDOW_EXPERIMENT.md  STRUCTURE.md
model/: configuration_csept.py  modeling_csept.py
notebooks/: csept.ipynb
scripts/: README_AUGMENTATION_EXPERIMENT.md  compare_experiments.py  eval_all_models.sh  experiment_augmentation.py  run_augmentation_experiment.sh
src/seqpred/: cli.py
src/seqpred/data/: __init__.py  spetDataset.py
src/seqpred/eval/: __init__.py  evaluator.py
src/seqpred/models/: __init__.py  csept_smooth_improved.py
src/seqpred/models/csept/: __init__.py  configuration_csept.py  modeling_csept.py
src/seqpred/models/csept_smooth/: __init__.py  configuration_csept_smooth.py  modeling_csept_smooth.py
src/seqpred/models/lstm_naive/: __init__.py  configuration_lstm_naive.py  modeling_lstm_naive.py
src/seqpred/models/rnn_naive/: __init__.py  configuration_rnn_naive.py  modeling_rnn_naive.py
src/seqpred/models/sept/: __init__.py  configuration_sept.py  modeling_sept.py
src/seqpred/train/: __init__.py  trainer.py
utils/: visualize.py
